--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -1,13 +1,16 @@
-# Passo 1: Use a imagem oficial do Rust baseada no Debian Bookworm.
-# Esta imagem é minimalista e vem com rustup, cargo e o PATH já configurados.
-FROM rust:bookworm
+# Passo 1: Comece com uma imagem base genérica e estável para Dev Containers.
+# Ela já vem com um usuário não-root ('vscode') e 'sudo' configurados.
+FROM mcr.microsoft.com/devcontainers/base:bookworm
 
-# Passo 2: Instale as dependências do sistema e ferramentas essenciais como 'root'.
-# Adicionamos 'sudo' para dar permissões elevadas ao nosso usuário não-root.
+# Passo 2: Mude para o usuário 'root' para instalar pacotes de sistema.
+USER root
+
+# Passo 3: Instale todas as nossas dependências de sistema necessárias.
+# Adicionamos 'curl' para poder baixar o instalador do Rust.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     # Ferramentas essenciais
-    sudo \
+    curl \
     build-essential \
     pkg-config \
     # Dependências para crates de bioinformática e web
@@ -25,19 +28,15 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     # Limpa o cache para manter a imagem pequena
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
-# Passo 3: Crie um usuário não-root chamado 'vscode' para o ambiente de desenvolvimento.
-# Adicionamos o usuário ao grupo 'sudo' e permitimos que ele use sudo sem senha.
-# Esta é uma prática padrão e segura para containers de desenvolvimento.
-RUN useradd -m -s /bin/bash vscode \
-    && echo "vscode ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
-
-# Passo 4: Mude para o nosso novo usuário não-root.
-# A partir daqui, todos os comandos são executados como 'vscode'.
+# Passo 4: Mude de volta para o usuário padrão do container.
 USER vscode
 
-# Passo 5: Instale os componentes do Rust necessários para o curso.
-# 'rustfmt' para formatação e 'clippy' para linting.
+# Passo 5: Instale o Rust (rustup, cargo, etc.) para o usuário 'vscode'.
+# O script do rustup cuida de configurar o PATH corretamente.
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+# Passo 6: Instale os componentes do Rust necessários para o curso.
 RUN rustup component add rustfmt clippy
 
-# Passo 6: Define o diretório de trabalho padrão.
+# Passo 7: Define o diretório de trabalho padrão.
 WORKDIR /workspaces
