--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -1,15 +1,13 @@
 # Passo 1: Começar com uma imagem Linux minimalista e moderna.
-# 'bookworm-slim' é uma versão enxuta do Debian 12.
 FROM debian:bookworm-slim
 
 # Passo 2: Evitar que instaladores façam perguntas interativas durante o build.
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Passo 3: Instalar, como 'root', as dependências de sistema essenciais.
-# Isso inclui ferramentas para compilar, gerenciar código e bibliotecas C
-# que são necessárias para as crates de bioinformática.
+# O Rust NÃO será instalado aqui. Apenas as ferramentas de suporte.
 RUN apt-get update && apt-get -y install --no-install-recommends \
-    # Ferramentas básicas de desenvolvimento e para baixar o Rust
+    # Ferramentas básicas de desenvolvimento e 'curl' (que você usará no Dia 1)
     build-essential \
     curl \
     git \
@@ -31,29 +29,13 @@ RUN apt-get update && apt-get -y install --no-install-recommends \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Passo 4: Criar um usuário não-root 'vscode' para o desenvolvimento.
-# É uma prática de segurança padrão não trabalhar como 'root'.
-# Damos a ele permissão de 'sudo' sem precisar de senha.
 RUN useradd -m -s /bin/bash vscode \
     && echo "vscode ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
-# Passo 5: Mudar para o novo usuário não-root.
+# Passo 5: Mude para o novo usuário não-root.
 USER vscode
-WORKDIR /home/vscode
 
-# Passo 6: Instalar a toolchain completa do Rust (rustc, cargo, rustup).
-# O script é baixado e executado. A flag '-y' automatiza a instalação,
-# aceitando as opções padrão sem precisar de interação.
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-
-# Passo 7: Adicionar os componentes 'rustfmt' (para formatação) e 'clippy' (para linting).
-# Executamos usando o caminho completo para garantir que funcione, pois o PATH
-# no shell de build pode não ter sido atualizado ainda.
-RUN /home/vscode/.cargo/bin/rustup component add rustfmt clippy
-
-# Passo 8: Forçar a adição do PATH ao .bashrc.
-# Esta é a garantia final de que qualquer novo terminal interativo
-# saberá onde encontrar o 'cargo'.
-RUN echo 'export PATH="/home/vscode/.cargo/bin:$PATH"' >> /home/vscode/.bashrc
-
-# Passo 9: Definir o diretório de trabalho final para o workspace.
+# Passo 6: Definir o diretório de trabalho final para o workspace.
 WORKDIR /workspaces
+
+# FIM DO DOCKERFILE. A instalação do Rust será feita manualmente pelo usuário.
